# advent_of_code

./: .gitignore  pyproject.toml
2022/: day1.py  day10.py  day13.py  day2.py  day3.py  day4.py  day5.py  day7.py  day8.py  new_day.sh
2022/completed/: day10.py  day11.py  day12.py  day3.py  day5.py  day6.py  day7.py  day9.py
2023/: day.py  day1.py  day2_question.txt  day3.py  day3_question.txt  day5.py  day5_question.txt  new_day.sh  template.txt
2023/completed/: day1_pt2.py  day2.py  day4.py  day4_question.txt
2024/: day1.py  day1_question.txt  get_question.py  new_day.sh
2024/completed/: day1.py  day2.py  day2_question.txt  day3.py  day3_question.txt  day4.py  day4_question.txt
sql/2024/: compose.sql.yml
