
[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select  = [
    # isort
    "I001",
]


[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pgcli>=4.1.0",
    "psycopg-binary>=3.2.3",
    "ruff>=0.8.1",
    "watchdog>=6.0.0",
]
